# otus-1

./: .gitignore  LICENSE  README.md  pyproject.toml
top_verbs/: main.py  paths.py  words.py
