[tool.poetry]
name = "top_verbs"
version = "0.1.0"
description = ""
authors = ["Alexander Erdyakov <sa@we1tkind.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
nltk = "^3.4"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"

[tool.poetry.scripts]
top-verbs = 'top_verbs.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
